<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="6dp"
        android:layout_margin="6dp">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="150dp">

        <TextView
                android:text="@string/layout_listmodel_title_movie_lb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listmodel_title_movie"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/layout_listmodel_created_date_movie_lb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                android:id="@+id/listmodel_date_movie" android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <TextView
                android:text="@string/layout_listmodel_description_movie_lb"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:id="@+id/listmodel_description_movie" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/color_listmodel_movie_description"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/listmodel_title_movie"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
