<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.prosegur.starwars.features.starwars.view.details.SWDetailsActivity"
        android:background="@color/color_movielist_activity_bg">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.prosegur.starwars.features.starwars.view.details.SWDetailsActivity"
                android:background="@color/color_movielist_activity_bg">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/color_movielist_activity_headers_bg"
                    android:gravity="center_vertical" android:id="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/dateTextView">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/color_movielist_activity_headers_text"
                          android:text="@string/sw_details_activity_director_header_txt"
                          android:layout_marginStart="8dp"/>
            </LinearLayout>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_movielist_activity_headers_text"
                    android:id="@+id/dateTextView" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/directorTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="8dp"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/color_movielist_activity_headers_bg"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/directorTextView"
                    android:id="@+id/linearLayout2">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/color_movielist_activity_headers_text"
                          android:text="@string/sw_details_activity_producer_header_txt"
                          android:layout_marginStart="8dp"/>
            </LinearLayout>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/producerTextView" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="vertical"
                    android:background="@color/color_movielist_activity_headers_bg"
                    android:gravity="center_vertical"

                    android:id="@+id/linearLayout4" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/producerTextView"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_horizontal|center_vertical"
                    tools:layout_editor_absoluteX="0dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                    android:orientation="vertical" android:id="@+id/linearLayout3">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/color_movielist_activity_headers_text"
                          android:text="@string/sw_details_activity_description_header_txt"/>
                <View android:layout_width="120dp"
                      android:layout_height="0.5dp"
                      android:background="@color/color_listmodel_movie_description"
                      android:layout_marginTop="5dp"/>
            </LinearLayout>


            <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/descriptionTextView" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="6dp" android:layout_marginEnd="6dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center_horizontal"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
    <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:translationY="-15dp"
            android:visibility="gone"

    >

        <include layout="@layout/sw_details_shimmer_activity" />


    </com.facebook.shimmer.ShimmerFrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
